[project]
name = "llm-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = [
    "datasets>=4.8.5",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "openai>=2.40.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rouge>=1.0.1",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "pylint",
    "pyright>=1.1.410",
    "ruff>=0.15.15",
]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0911",  # too-many-return-statements
    "R0912",  # too-many-branches
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "R0917",  # too-many-positional-arguments
    "W0212",  # protected-access
    "W0718",  # broad-exception-caught
    "E0401",  # import-error (datasets may not be installed in CI)
    "E0601",  # used-before-assignment (TYPE_CHECKING false positives)
]

[tool.pylint.format]
max-line-length = 88

[tool.ruff]
line-length = 88
